--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -22,8 +22,8 @@
             <trans-unit id="tx_koningbootstrapcarousel_domain_model_slide.link_text">
                 <source>Link text</source>
             </trans-unit>
-            <trans-unit id="tx_koningbootstrapcarousel_domain_model_slide.slider_text">
-                <source>Slider text</source>
+            <trans-unit id="tx_koningbootstrapcarousel_domain_model_slide.description">
+                <source>Description text</source>
             </trans-unit>
             <trans-unit id="tx_koningbootstrapcarousel_domain_model_slide.visual">
                 <source>Visual</source>
