--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2012-10-17T19:30:32Z" product-name="koning_bootstrap_carousel">
+    <file source-language="en" datatype="plaintext" original="messages">
         <header/>
         <body>
             <trans-unit id="plugin.title">
                 <source>Bootstrap carousel</source>
+            </trans-unit>
+            <trans-unit id="plugin.description">
+                <source>Any number of slides aligned in a bootstrap layout.</source>
             </trans-unit>
             <trans-unit id="tt_content.koningbootstrapcarousel_slides">
                 <source>Bootstrap carousel slides</source>
