--- a/Resources/Private/Language/nl.locallang.xlf
+++ b/Resources/Private/Language/nl.locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.0">
-    <file source-language="en" target-language="nl" datatype="plaintext" original="messages" date="2012-10-17T19:30:32Z" product-name="koning_bootstrap_carousel">
+    <file source-language="en" target-language="nl" datatype="plaintext" original="messages">
         <header/>
         <body>
             <trans-unit id="previous">
